# bevy_declarative_ui

./: Cargo.toml  README.md
js/: VirtualDom.js
src/: element.rs  flag.rs  input.rs  lib.rs  model.rs  style.rs  vdom.rs
