[package]
name = "bevy_declarative_ui_experiment"
version = "0.1.0"
authors = ["Cole Poirier <colepoirier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {git = "https://github.com/bevyengine/bevy/"}